# nb_RTSPFace

./: .env.example  .gitignore  README.md  bitBucketUpdate.sh  docker-compose.hailo.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: docker-build.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  compat.py  config.py  logging_setup.py  main.py  runtime_settings.py  schemas.py
backend/app/api/: __init__.py  deps.py  faces.py  search.py  settings.py  stream.py  system.py  ws.py  zone.py
backend/app/db/: __init__.py  models.py  repository.py  session.py
backend/app/pipeline/: __init__.py  camera.py  cropper.py  detector.py  events.py  hailo_models.py  hailo_runtime.py  health.py  live.py  orchestrator.py  quality.py  scrfd_decode.py  stats.py  tracker.py  vector_store.py  workers.py  zone.py
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: FaceCard.jsx  StatCard.jsx  ZoneEditor.jsx
frontend/src/lib/: api.js  useEvents.js
frontend/src/pages/: FaceDetailPage.jsx  LivePage.jsx  RecentPage.jsx  SearchPage.jsx  SettingsPage.jsx  StatsPage.jsx
scripts/: fetchHailoModels.sh  hailoCheck.sh  hailoDriverFix.sh  installHailo.sh  npuCheck.sh
